Fixed dark mode transition

--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,7 @@ nav a {
 }
 nav a:hover {
     background-color: #aec8f0; 
+    transition: all 0.3s ease;
 }
 
 h2{
@@ -45,17 +46,24 @@ p{
 }
 
 .alignRight {
-text-align: right;
-padding-right: 20px;
+    text-align: right;
+    padding-right: 20px;
 }
 
 button {
-font-size: 30px;
-background-color: #233255;
-border-color:#d7e1f1;
-color: #d7e1f1;
-font-family:'Roboto Slab';
-border-style:solid;
-border-width:5px;
-padding:25px;
+    font-size: 30px;
+    background-color: #233255;
+    border-color:#233255;
+    color: #d7e1f1;
+    font-family:'Roboto Slab';
+    border-style:solid;
+    border-width:5px;
+    padding-left: 25px;
+    padding-right: 25px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+button:hover {
+    transition: all 0.3s ease;
 }
